@@ -2,5 +2,6 @@
  - opraveno neúplné listování epizod u některých seriálů
  - přidaná závistols na script.module.stream.resolver - přesunut kód, který
  získává URL streamů
+ - přidán přehled nejnovějších epizod
 [B]1.0.0:[/B]
 Initial version
